--- a/src/App.css
+++ b/src/App.css
@@ -242,6 +242,15 @@ body {
     gap: 6px;
   }
 
+  .navbar-container {
+    position: sticky;
+    margin-top: -162px;
+  }
+
+  .call-text {
+    text-align: center;
+  }
+
   .main-navbar {
     flex-direction: row;
     justify-content: space-between;
@@ -404,6 +413,7 @@ body {
 
   .call-box {
     padding: 10px 12px;
+    justify-content: center;
   }
 }
 
@@ -418,6 +428,7 @@ body {
 
   .call-box {
     padding: 10px 14px;
+    justify-content: center;
   }
 }
 
@@ -434,6 +445,7 @@ body {
 
   .call-box {
     padding: 12px 18px;
+    justify-content: center;
   }
 }
 
@@ -659,10 +671,10 @@ body {
 }
 
 .projects-subtitle {
-  color: #6c63ff;  
-  font-size: 14px;
+  color: #20ace3;  
+  font-size: 18px;
   font-weight: 500;
-  margin-bottom: 15px;
+  margin-bottom: 10px;
 }
 
 .projects-title {
@@ -1168,15 +1180,15 @@ body {
 }
 .expert-subtitle {
   font-size: 15px;
-  color: #6c63ff;
+  color: #20ace3;
   font-weight: 500;
   margin-bottom: 12px;
   position: relative;
   display: inline-block;
-  margin-left: 35px;
+  margin-left: 0px;
 }
 .expert-subtitle::before {
-  content: "";
+  /* content: ""; */
   position: absolute;
   left: -28px;
   top: 50%;
@@ -1260,7 +1272,7 @@ body {
 .team-name {
   font-size: 22px;
   font-weight: 700;
-  color: #111;
+  color: #0676be;
   margin: 0 0 6px 0;
   transition: color 0.3s;
 }
