set Background-image in Dealing.js file

--- a/src/App.css
+++ b/src/App.css
@@ -563,7 +563,8 @@ body {
 
 /* Service.js */
 .service-section {
-  background: linear-gradient(to top,#a8cfe6 50%, #ffffff 50%);
+    /* background: linear-gradient(to top,#a8cfe6 50%, #ffffff 50%); */
+  background: linear-gradient(to top,#768ba0 50%, #ffffff 50%);
   padding: 60px 20px;
   background-repeat: no-repeat;
   background-size: 120% 149%; 
